explaining the new stablecoin report in lit

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -131,11 +131,19 @@
   year={2016}
 }
 
-@article{report,
+@article{report1,
 	title={The state of stablecoins},
 	author={Blockchain},
 	year={2018}
 }
+
+
+@article{report2,
+	title={2019 state of stablecoin},
+	author={Blockchain},
+	year={2019}
+}
+
 
 @misc{euromoney,
 	Author = {Peter Lee},
