--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -28,7 +28,8 @@ In response to Bitcoin's extreme volatility, a flood of proposals have been made
 
 \textblue{there is a lot of different views,  but we should include bank of england(explain that)}
 In 2016, Ametrano introduces \textit{Hayek Money}, a new monetary policy of elastic non-discretionary supply that can be used to achieve a price stable cryptocurrency~\cite{ametrano2016hayek}. There are currently many blog posts on the overview of stablecoins and how to design them. According to these resources, the main three approaches to design a stablecoin are (i) fiat-collateralized, (ii) crypto-collateralized and (iii) non-collateralized (also known as algorithmic)(\eg~\cite{hackernoon, comprehensiveOverview, linkedin}) are the examples that give the overview of stablecoins based on these three approaches. \textblue{Note that these resources uses various terms for these three categories interchangeably, \textbf{do we have to mention this? if yes (i) is it the best way of saying it? and (ii) should we mention each and every of these terms? (algorithmic, seignorage shares, elastic money supply)}}
-Buterin, in one of the earliest blog posts on stable cryptocurrencies, discussed different techniques to measure cryptocurrencies' price and how to make adjustments in the supply to achieve a fixed price accordingly~\cite{TheSearc7:online}. Bitmex looked at the mechanics of the distributed stablecoins while focusing on two case studies (\ie BitShares (BitUSD) and MakerDAO (Dai))~\cite{bitmex}. Another report from a crypto company called Blockchain \footnote{https://www.blockchain.com} provides an extensive classification of 57 stablecoins together with discussions on issues related to governance (\eg legal structure, investors, partners \etc)~\cite{report}. In one of its blog posts, Consensys \footnote{https://consensys.net} describes stablecoins as "crypto-assets that maintain a stable value against a target price (e.g. USD)" and classify them according to the three main categories~\cite{StateofS96:online}. In~\cite{cryptoinsider}, the authors use a slightly different categorization to group 13 stabelcoin projects into two broad categories: (i) centralized-- which itself contains subcategories based on the type of the asset the coins are backed by (\eg fiat and gold), (ii) decentralized. Unlike other resources that define stablecoins within three categories (fiat-collateralized, crypto-collateralized, and non-collaterlaized), in this paper, we introduce new systemization of stablecoin projects and describe their fundamental primitives.
+Buterin, in one of the earliest blog posts on stable cryptocurrencies, discussed different techniques to measure cryptocurrencies' price and how to make adjustments in the supply to achieve a fixed price accordingly~\cite{TheSearc7:online}. Bitmex looked at the mechanics of the distributed stablecoins while focusing on two case studies (\ie BitShares (BitUSD) and MakerDAO (Dai))~\cite{bitmex}. Another report by a crypto company called \textit{the Blockchain} \footnote{https://www.blockchain.com} provides an extensive classification of 57 stablecoins together with discussions on issues related to governance (\eg legal structure, investors, partners \etc)~\cite{report1}. They extend this research in a newly published report that reflects a significant update on their previous work~\cite{report2}. In one of its blog posts, Consensys \footnote{https://consensys.net} describes stablecoins as "crypto-assets that maintain a stable value against a target price (e.g. USD)" and classify them according to the three main categories~\cite{StateofS96:online}. In~\cite{cryptoinsider}, the authors use a slightly different categorization to group 13 stabelcoin projects into two broad categories: (i) centralized-- which itself contains subcategories based on the type of the asset the coins are backed by (\eg fiat and gold), (ii) decentralized. Unlike other resources that define stablecoins within three categories (fiat-collateralized, crypto-collateralized, and non-collaterlaized), in this paper, we introduce new systemization of stablecoin projects and describe their fundamental primitives.
+
 
 %=============
 % Cite Ross Anderson's paper :"Bitcoin Reducx" :
