lit review + fix bib file + edits

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -131,14 +131,14 @@
   year={2016}
 }
 
-@article{report1,
+@article{reportone,
 	title={The state of stablecoins},
 	author={Blockchain},
 	year={2018}
 }
 
 
-@article{report2,
+@article{reporttwo,
 	title={2019 state of stablecoin},
 	author={Blockchain},
 	year={2019}
@@ -220,13 +220,6 @@ year = {2018},
 note = {(Accessed on 02/12/2019)}
 }
 
-@article{sams2015note,
-  title={A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
-  author={Sams, Robert},
-  journal={Brave New Coin},
-  pages={1--8},
-  year={2015}
-}
 
 @article{anderson2019bitcoin,
   title={Bitcoin redux},
