--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -32,7 +32,7 @@
 
 % = = = = = End Notes = = = = = %
 
-\input{sections/appendix}
+%\input{sections/appendix}
 
 % = = = = = End Notes = = = = = %
 
