--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -12,8 +12,10 @@
 
 \begin{document}
 \title{Demystifying Stablecoins}
-\author{Didem Demirag \and Seyedehmahsa Moosavi \and Jeremy Clark}
-\date{\textit{Gina Cody School of Engineering and Computer Science\\Concordia University}}
+\author{}\date{}
+
+%\author{Didem Demirag \and Seyedehmahsa Moosavi \and Jeremy Clark}
+%\date{\textit{Gina Cody School of Engineering and Computer Science\\Concordia University}}
 \maketitle
 
 % = = = = = Abstract = = = = = %
