Edits on the framework

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -335,20 +335,9 @@ In this Section, we review various issues with different mechanisms of designing
 
 
 \begin{table}[htb!]
+\centering
 
 	\begin{tabular}{ lllllllll}
-
-		&
-
-		\headrow{Stable to undervaluation} &
-		\headrow{Stable to overvaluation} &
-		\headrow{No issuance violation} &
-		\headrow{Redemption guaranteed} &
-		\headrow{No intermediaries for transfer} &
-		\headrow{No trusted oracle} &
-		\headrow{No collateral termination} \\
-
-		\hline
 
 &
 \headrow{Corrects undervaluation} &
@@ -372,7 +361,8 @@ In this Section, we review various issues with different mechanisms of designing
 		%p{1cm}
 
 	\end{tabular}
-	\caption{Evaluation Framework.\label{tab:evframework}}
+	\caption{Comparative evaluation of mechanisms to design stablecoins. {\full} indicates the properties (columns) are fulfilled the corresponding mechanisms (rows). {\prt} partially fulfilled. (\textblue{is there any other newly defined sign?})
+	\label{tab:evframework}}
 
 \end{table}
 %=============%
